Fix reset password + alignment

--- a/src/components/Error.module.scss
+++ b/src/components/Error.module.scss
@@ -5,7 +5,7 @@
   background: white;
   padding: 8px;
   margin: 8px 0px;
-  width: 100%;
+  flex: 1;
   border: 2px solid $border-color;
   display: flex;
   align-items: center;
